force-app/main/default/objects/Task_Template__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <label>Assigned to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>MIC</fullName>
            </value>
            <value>
                <fullName>PIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>