force-app/main/default/objects/Task_Template__c/fields/CLC_Stage__c.field-meta.xml
<CustomField>
    <fullName>CLC_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLC Stage</label>
    <referenceTo>CLC_Stage__c</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>