force-app/main/default/objects/Task_Template__c/fields/DY__c.field-meta.xml
<CustomField>
    <fullName>DY__c</fullName>
    <label>DY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>