force-app/main/default/objects/Task_Template__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Kickoff call</fullName>
            </value>
            <value>
                <fullName>QBR Call</fullName>
            </value>
            <value>
                <fullName>Renewal call</fullName>
            </value>
            <value>
                <fullName>Onboarding call</fullName>
            </value>
            <value>
                <fullName>Message Sent</fullName>
            </value>
            <value>
                <fullName>Message Opened</fullName>
            </value>
            <value>
                <fullName>Link Clicked in Message</fullName>
            </value>
            <value>
                <fullName>Attachment Opened in Message</fullName>
            </value>
            <value>
                <fullName>Presentation Viewed in Message</fullName>
            </value>
            <value>
                <fullName>Reply</fullName>
            </value>
            <value>
                <fullName>Prospect demo</fullName>
            </value>
            <value>
                <fullName>Decision Maker demo</fullName>
            </value>
            <value>
                <fullName>Customer Individual training</fullName>
            </value>
            <value>
                <fullName>Customer Team training</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Attempt/ Left message</fullName>
            </value>
            <value>
                <fullName>Prospect Qualification call</fullName>
            </value>
            <value>
                <fullName>Prospect Cold call</fullName>
            </value>
            <value>
                <fullName>Sales Discovery call</fullName>
            </value>
            <value>
                <fullName>Sales Pricing call</fullName>
            </value>
            <value>
                <fullName>Sales Scoping call</fullName>
            </value>
            <value>
                <fullName>Legal call</fullName>
            </value>
            <value>
                <fullName>Follow-up call</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>On-site QBR (CSM)</fullName>
            </value>
            <value>
                <fullName>Executive briefing</fullName>
            </value>
            <value>
                <fullName>Commercial talks (Sale, upsell, renewal)</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>