force-app/main/default/objects/Task_Template__c/fields/Task_Record_type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_type__c</fullName>
    <label>Task Record type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insights/Nurturing</fullName>
            </value>
            <value>
                <fullName>Utilization/Engagement</fullName>
            </value>
            <value>
                <fullName>Insights/Utilization</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Renewal Tasks</fullName>
            </value>
            <value>
                <fullName>Onboarding Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>