force-app/main/default/objects/Task_Template__c/validationRules/Invalid_Due_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Due_date</fullName>
    <active>false</active>
    <errorConditionFormula>Due_date__c &lt; Generation_date__c &amp;&amp; 
NOT($Profile.Id=&apos;00eb0000000oBvcAAE&apos;)</errorConditionFormula>
    <errorDisplayField>Due_date__c</errorDisplayField>
    <errorMessage>Due Date cannot be less than Generation Date</errorMessage>
</ValidationRule>