force-app/main/default/objects/Task_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLC_Stage__c</columns>
    <columns>Subject__c</columns>
    <columns>Generation_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>